--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/AdminSetting/EditTeacher.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/AdminSetting/EditTeacher.cshtml
@@ -9,25 +9,25 @@
 }
 <form asp-controller="AdminSetting" asp-action="EditTeacher" method="post">
     <input type="hidden" asp-for="Id" />
-
+    <div asp-validation-summary="All"></div>
     <div class="form-group">
         <label>First Name</label>
-        <textarea asp-for="FirstName" class="form-control" rows="2"></textarea>
+        <textarea asp-for="FirstName" class="form-control" rows="2" required></textarea>
     </div>
     <div class="form-group">
         <label>Last Name</label>
-        <textarea asp-for="LastName" class="form-control" rows="2"></textarea>
+        <textarea asp-for="LastName" class="form-control" rows="2" required></textarea>
     </div>
 
     <div class="form-group">
         <label>Email</label>
-        <input asp-for="Email" class="form-control" rows="2" />
+        <input asp-for="Email" class="form-control" rows="2" required/>
     </div>
 
     <div class="form-group">
         <label class="col-2 col-form-label">Type Teacher</label>
         <div class="col-10">
-            <input class="form-control" asp-for="TypeTeacher">
+            <input class="form-control" asp-for="TypeTeacher" required>
         </div>
     </div>
 
